Added CategoryController and Database

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "gratisAPIContext": "Server=(localdb)\\mssqllocaldb;Database=gratisAPIContext-5d1b2cac-9894-41d2-b04d-8734ca266709;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
